--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
         <meta charset="utf-8">
         <script src="script.js"></script>
     </head>
+    <body>
+
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+
+    </body>
 
 </html>
