--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
 
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
+
+        <div id="results" style="border: .1em solid black; height: 100px; margin-top: 2em;">
+            <!-- <p id="user" style="display: inline-block; margin-right: 15px; margin-top: 50px;"></p>
+            <p id="computer" style="display: inline-block; margin-right: 15px;"></p> -->
+        </div>
+        <p id="score" style="display: inline-block;"></p>
 
     </body>
 
